リンク修正 stp

--- a/STP/SDE.ipynb
+++ b/STP/SDE.ipynb
@@ -200,7 +200,7 @@
     "\n",
     "と比較する。なおこの微分方程式の解析解は、$X(t) = \\frac{2exp(2t)}{1 + exp(2t)}$ 。\n",
     "\n",
-    "[ODEのコード](./ode.py),   [SDEのコード](./sde.py),   [SDEにおける修正オイラー法・ルンゲクッタ法の数式的説明](http://ci.nii.ac.jp/naid/110002868791)"
+    "[ODEのコード](https://github.com/myuuuuun/various/blob/master/STP/ode.py),   [SDEのコード](https://github.com/myuuuuun/various/blob/master/STP/sde.py),   [SDEにおける修正オイラー法・ルンゲクッタ法の数式的説明](http://ci.nii.ac.jp/naid/110002868791)"
    ]
   },
   {
